<resources>
    <string name="app_name">Weather Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather APP</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_settings">Settings</string>
    <string name="map">Map</string>

    <string name="tomorrow">Tomorrow</string>
    <string name="today">Next 24 Hours</string>
    <string name="nextDays">Next 5 Days</string>
    <string name="pressure">Pressure</string>
    <string name="humidty">Humidty</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="visibilty">Visibilty</string>

    <string name="alarm_icon">Alarm Icon</string>
    <string name="time">Alarm Time</string>

    <string name="cancel">Cancel</string>
    <string name="nofavorites">No Favorites</string>
    <string name="noalerts">No Alerts</string>
    <string name="back_button_description">Return To Favorites</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="search">Search here</string>
    <string name="alarm">Weather Alarm</string>
    <string name="stop">Stop</string>
    <string name="go_to_weather">Go To App</string>
    <string name="alert_weather_dialog">Its time to check the weather</string>
    <string name="up_location">Update Your Location</string>

    <string name="location">Location</string>
    <string name="gps">GPS</string>

    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>

    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>

    <string name="windspeed">WindSpeed</string>
    <string name="mps">Meter/Sec</string>
    <string name="mph">Mile/Hour</string>

    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>

    <string name="no_network">No Network</string>
    <string name="open_network">Please Open Network and Try again.</string>
    <string name="no_network_lang">Need Network To Full Translation, Open Network and Try again.</string>
    <string name="ok">OK</string>


</resources>