<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weatherapplication.ui.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="lon"
            app:argType="float" />
        <argument
            android:name="lat"
            app:argType="float" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.weatherapplication.ui.favorites.view.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favoritesFragment_to_favoritesDetailsFragment"
            app:destination="@id/nav_favorites_details" />
        <action
            android:id="@+id/action_nav_favorites_to_mapFragment"
            app:destination="@id/mapFragment"
            app:launchSingleTop="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites_details"
        android:name="com.example.weatherapplication.ui.favorites.view.FavoritesDetailsFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites_details"/>

    <fragment
        android:id="@+id/nav_alerts"
        android:name="com.example.weatherapplication.ui.alerts.AlertsFragment"
        android:label="@string/menu_alerts"
        tools:layout="@layout/fragment_alerts" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.weatherapplication.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_mapFragment"
            app:destination="@id/mapFragment" />
        <action
            android:id="@+id/action_nav_settings_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.weatherapplication.ui.map.view.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_mapFragment_to_nav_favorites"
            app:destination="@id/nav_favorites" />
        <argument
            android:name="comeFrom"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="Favorites" />
        <action
            android:id="@+id/action_mapFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_mapFragment_to_nav_settings"
            app:destination="@id/nav_settings" />
    </fragment>

</navigation>