<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/rounded_favorite_item">


    <ImageView
        android:id="@+id/alarmIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/alarm_icon"
        android:src="@drawable/ic_notifications"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="138dp"
        android:layout_height="27dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelButton"
        app:layout_constraintStart_toEndOf="@+id/alarmIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/rounded_button_background"
        android:contentDescription="@string/cancel"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_color" />


</androidx.constraintlayout.widget.ConstraintLayout>

