<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.home.view.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="Alexandria"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                tools:text="Alexandria" />

            <TextView
                android:id="@+id/txtWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Mostly Cloudy"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="Mostly Cloudy" />

            <ImageView
                android:id="@+id/imgWeather"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/cloudy_sunny"
                tools:src="@drawable/cloudy_sunny" />

            <TextView
                android:id="@+id/txtDateAndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Mon Jun 17 | 10:00 AM"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="Mon Jun 17 | 10:00 AM" />

            <TextView
                android:id="@+id/txtWeatherDeg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="25°"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="63sp"
                android:textStyle="bold"
                tools:text="25°" />

            <TextView
                android:id="@+id/txtHAndLDeg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="H:27 L:18"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="H:27 L:18" />

            <TextView
                android:id="@+id/txtTody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/today"
                android:textColor="#DCA900"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_view_hourly"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                tools:listitem="@layout/hours_item" />

            <TextView
                android:id="@+id/txtNextDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/nextDays"
                android:textColor="#DCA900"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_view_days"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:nestedScrollingEnabled="true"
                tools:listitem="@layout/days_item" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@drawable/weather_des_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgPressure"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_pressure" />

                        <TextView
                            android:id="@+id/txtPressureDeg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="22%"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            tools:text="22%" />

                        <TextView
                            android:id="@+id/txtPressure"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgHumidty"
                            android:layout_width="34dp"
                            android:layout_height="41dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_humidity" />

                        <TextView
                            android:id="@+id/txtHumidtyDeg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="22%"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            tools:text="22%" />

                        <TextView
                            android:id="@+id/txtHumidty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidty"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageWind"
                            android:layout_width="31dp"
                            android:layout_height="41dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_wind" />

                        <TextView
                            android:id="@+id/txtWindDeg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="22%"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            tools:text="22%" />

                        <TextView
                            android:id="@+id/txtWind"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgCloud"
                            android:layout_width="34dp"
                            android:layout_height="39dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_cloud" />

                        <TextView
                            android:id="@+id/txtCloudDeg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="22%"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            tools:text="22%" />

                        <TextView
                            android:id="@+id/txtCloud"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cloud"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgUV"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_uv" />

                        <TextView
                            android:id="@+id/txtUVDeg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="22%"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            tools:text="22%" />

                        <TextView
                            android:id="@+id/txtUV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ultra_violet"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="0.333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgVisibilty"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_visibility" />

                        <TextView
                            android:id="@+id/txtVisibiltyDeg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="22%"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            tools:text="22%" />

                        <TextView
                            android:id="@+id/txtVisibilty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/visibilty"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
